2009-10-30  Miguel de Dios <miguel.dedios@artica.es>

	* include/functions_api.php: fix the tiny bug that not set the default
	separator in function "get_tree_agents".
	* godmode/reporting/reporting_builder.php: fix the bug that don't change the
	select box of module.
	Fixes: 2888988

2009-10-30  Miguel de Dios <miguel.dedios@artica.es>

	* DEBIAN/control, DEBIAN/md5sums, DEBIAN/postinst, DEBIAN/prerm,
	DEBIAN/conffiles: sorry, I had the permissions to directory DEBIAN not
	"755" and in the previus commit don't upload.

2009-10-29  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/postinst: add the same message as RPM in the finish installation.

2009-10-29  Miguel de Dios  <miguel.dedios@artica.es>

	* DEBIAN/control, DEBIAN/md5sums, DEBIAN/postinst: debian base files for
	to make a .deb package.
	* make_deb_package.sh: shell script for make automatically the debs packages
	for standard installation in a Debian Lenny, this script make two packages
	"pandorafms.console_3.0.0.rc1.deb" and "php-xml-rpc_1.5.2-1_all.deb" the
	rest of packages dependencies is in official Debian repositories.
	
2009-10-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php: extend the funcionality "returnError".

2009-10-27  Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_api.php: add in the function "isInACL" the posibility
	to no filter if set in ACL the character "*".

2009-10-26  Ramon Novoa  <rnovoa@artica.es>

	* extensions/update_manager.php,
	  operation/incidents/incident.php,
	  operation/menu.php,
	  godmode/setup/links.php,
	  godmode/users/configure_user.php,
	  godmode/agentes/planned_downtime.php,
	  godmode/agentes/agent_manager.php,
	  godmode/reporting/reporting_builder.php,
	  godmode/reporting/map_builder.php,
	  godmode/reporting/graphs.php,
	  godmode/reporting/graph_builder.php,
	  godmode/alerts/alert_templates.php,
	  godmode/menu.php: Several ACL related fixes.

2009-10-26  Miguel de Dios  <miguel.dedios@artica.es>
