@@ -1,3 +1,8 @@
+2009-10-30  Ramon Novoa  <rnovoa@artica.es>
+
+	* operation/snmpconsole/snmp_view.php: Added a status filter. Fixed
+	  deletion confirmation.
+
 2009-10-30  Miguel de Dios <miguel.dedios@artica.es>
 
 	* include/functions_api.php: fix the tiny bug that not set the default
